<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tour_details_block_background">

    <TextView
        android:id="@+id/tourist_information_block_title"
        style="@style/client_information_block_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_16dp_medium"
        android:text="@string/first_tourist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/open_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/open_close_button_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/open_button_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_up"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_20dp_medium"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tourist_information_block_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_name"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_second_name"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_second_name"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_citizenship"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_second_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_citizenship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_citizenship"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_birth_date"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_citizenship">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_date_of_birth"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_passport_number"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_birth_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_passport_number"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_passport_expiring_date"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp_medium"
        android:layout_marginTop="@dimen/margin_8dp_small"
        android:layout_marginBottom="@dimen/margin_16dp_medium"
        app:hintTextAppearance="@style/client_information_floating_hint_text_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_passport_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_passport_expiring_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tourist_information_passport_expiring_date"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/margin_16dp_medium"
            android:paddingBottom="@dimen/margin_10dp_small"
            android:singleLine="true"
            android:textAppearance="@style/client_information_hint_text_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_8dp_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_passport_expiring_date" />

</androidx.constraintlayout.widget.ConstraintLayout>